grammar.ebnf
// Old
expression -> literal | unary | binary | grouping ;


literal -> NUMBER | STRING | "true" | "false" | "nil" ;
grouping -> "(" expression ")" ;
unary -> ( "-" | "!" ) expression ;
binary -> expression operator expression ;
operator -> "==" | "!=" | "<" | "<=" | ">" | ">=" | "+" | "-" | "*" | "/" ;

// Improvised (added precedence and associativity)

expression -> equality ;

equality -> comparison (("!=" | "==") comparision)* ;
comparision -> term ((">" | ">=" | "<=") term)* ;
term -> factor (("+" | "-") factor)* ;
factor -> unary (("*" | "/") unary)* ;
unary -> ("!" | "-") unary | primary ;
primary -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" ;
